--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -2,11 +2,11 @@
 name = "pathway"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 url = "2.5"
-anyhow = "1.0"
 thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
