--- a/core/deny.toml
+++ b/core/deny.toml
@@ -18,20 +18,17 @@ allow = [
     "BSD-3-Clause",
     "ISC",
     "Unicode-DFS-2016",
+    "Unicode-3.0",
     "CC0-1.0",
 ]
 # List of explicitly disallowed licenses
-deny = [
-    "GPL-3.0",
-    "AGPL-3.0",
-    "GPL-2.0",
-    "LGPL-3.0",
-    "LGPL-2.1",
-]
-copyleft = "warn"
-allow-osi-fsf-free = "neither"
-default = "deny"
+# deny = []
 confidence-threshold = 0.8
+exceptions = []
+
+[licenses.private]
+ignore = true
+registries = []
 
 [bans]
 multiple-versions = "warn"
