Implement profile management and browser integration
- Added ProfileManager for discovering and managing browser profiles.
- Introduced ProfileInfo, ProfileOptions, and ProfileType structs for profile representation.
- Implemented methods for generating launch arguments based on profile options and window settings.
- Added error handling for profile-related operations.
- Created integration tests for core functionality and browser-dependent features.
- Updated README with test organization and usage instructions for GitHub Actions.
- Implemented browser-specific tests for launching with profiles and window options.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,13 +68,13 @@ jobs:
         working-directory: ./core
         run: cargo build --verbose
 
-      - name: Run tests
+      - name: Run core tests
         working-directory: ./core
-        run: cargo test --verbose
+        run: cargo test --lib --test integration --verbose
 
-      - name: Run tests (release mode)
+      - name: Run core tests (release mode)
         working-directory: ./core
-        run: cargo test --release --verbose
+        run: cargo test --lib --test integration --release --verbose
 
   coverage:
     name: Code Coverage
@@ -95,7 +95,7 @@ jobs:
 
       - name: Generate code coverage
         working-directory: ./core
-        run: cargo tarpaulin --out xml --all-features
+        run: cargo tarpaulin --out xml --all-features --exclude-files tests/browser_integration.rs
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
