--- a/packaging/macos/Info.plist
+++ b/packaging/macos/Info.plist
@@ -22,7 +22,7 @@
     <string>@VERSION@</string>
     <key>LSMinimumSystemVersion</key>
     <string>11.0</string>
-    <key>LSBackgroundOnly</key>
+    <key>LSUIElement</key>
     <true/>
     <key>NSHighResolutionCapable</key>
     <true/>
