--- a/.github/workflows/macos-app.yml
+++ b/.github/workflows/macos-app.yml
@@ -10,13 +10,18 @@ jobs:
     runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
+      
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        
       - name: Build macOS app bundle
         run: packaging/macos/build_app.sh
-      - name: Upload artifact
+        
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Pathway-macos
-          path: packaging/macos/dist/*.zip
+          path: |
+            packaging/macos/dist/*.zip
+            packaging/macos/dist/*.pkg
           if-no-files-found: error
