--- a/packaging/macos/Info.plist
+++ b/packaging/macos/Info.plist
@@ -36,8 +36,36 @@
                 <string>http</string>
                 <string>https</string>
             </array>
+            <key>CFBundleTypeRole</key>
+            <string>Viewer</string>
         </dict>
     </array>
+    <key>CFBundleDocumentTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeName</key>
+            <string>HTML Document</string>
+            <key>CFBundleTypeRole</key>
+            <string>Viewer</string>
+            <key>LSItemContentTypes</key>
+            <array>
+                <string>public.html</string>
+                <string>public.xhtml</string>
+            </array>
+        </dict>
+        <dict>
+            <key>CFBundleTypeName</key>
+            <string>Web Address</string>
+            <key>CFBundleTypeRole</key>
+            <string>Viewer</string>
+            <key>LSItemContentTypes</key>
+            <array>
+                <string>public.url</string>
+            </array>
+        </dict>
+    </array>
+    <key>LSHandlerRank</key>
+    <string>Alternate</string>
     <key>NSAppleEventsUsageDescription</key>
     <string>Pathway needs to control browsers to open URLs.</string>
     <key>CFBundleIconFile</key>
