Refactor browser selection and profile management
- Removed unused `available_tokens` function and cleaned up imports in `lib.rs`.
- Updated `main.rs` to streamline browser channel and source arguments, replacing `BrowserChannelArg` with `String`.
- Enhanced `select_browser` function to support installation source filtering and improved fallback logic.
- Modified `ProfileManager` to use `BrowserInfo` for determining base directories and added support for DuckDuckGo profiles.
- Updated tests to reflect changes in command-line argument parsing and browser checking functionality.
- Improved error messages and warnings related to unsupported features for Safari and DuckDuckGo.

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -25,3 +25,10 @@ assert_cmd = "2.0"
 predicates = "3.1"
 tempfile = "3.8"
 mockall = "0.13"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+core-foundation = "0.10"
+core-services = "1.0"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+winreg = "0.55"
